Cleanup a little bit run on centos

--- a/src/libOpenImageIO/CMakeLists.txt
+++ b/src/libOpenImageIO/CMakeLists.txt
@@ -136,7 +136,7 @@ target_link_libraries (OpenImageIO
             ${format_plugin_libs} # Add all the target link libraries from the plugins
             $<TARGET_NAME_IF_EXISTS:OpenColorIO::OpenColorIO>
             $<TARGET_NAME_IF_EXISTS:OpenColorIO::OpenColorIOHeaders>
-            $<TARGET_NAME_IF_EXISTS:yaml-cpp>
+            $<TARGET_NAME_IF_EXISTS:yaml-cpp::yaml-cpp>
             $<TARGET_NAME_IF_EXISTS:pystring::pystring>
             $<TARGET_NAME_IF_EXISTS:EXPAT::EXPAT>
             $<TARGET_NAME_IF_EXISTS:pugixml::pugixml>
